mitmproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mitmproxy
  namespace: mitmproxy
spec:
  selector:
    app: mitmproxy
  ports:
    - name: proxy
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: web
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
