mitmproxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mitmproxy
  namespace: mitmproxy
spec:
  rules:
  - host: mitmproxy.house
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mitmproxy
            port:
              number: 8081
